--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+.navbar{
+    box-shadow: 0px 8px 8px -6px rgba(0,0,0,.5);
+    }
+#title-text{
+    font-size: 2rem;
+    font-weight: bold;
+    padding-left: 1rem;
+}
+#artistList {
+    padding: 2rem;
+}
